# redrat_ir_controller

./: .gitignore  99-redrat.rules  README-DEPLOY.md  README.md  main.py  pyproject.toml  requirements.txt
api/: server.py
config/: config.yaml  config_example.yaml  ir_codes.yaml  ir_codes_example.yaml  macros.yaml  macros_example.yaml  voice_commands.yaml
deploy/: redrat.service
macros/: executor.py
redrat/: device.py  lirc_device.py  protocol.py  store.py
scripts/: download_models.sh  start.sh  test_audio.py  test_wake.py
tests/: test_protocol.py
voice/: audio.py  command_matcher.py  store.py  stt.py  wake_word.py
